--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,175 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
+    android:id="@+id/content_main"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/activity_main" tools:context=".MainActivity">
-
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/tableLayout">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:shrinkColumns="1"
-            android:stretchColumns="1">
-
-            <ImageButton
-                android:id="@+id/row0_col0"
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:src="@drawable/red"
-                android:layout_margin="5dp" />
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row0_col1"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row0_col2"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row0_col3"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:shrinkColumns="1"
-            android:stretchColumns="1">
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row1_col0"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row1_col1"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row1_col2"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row1_col3"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:shrinkColumns="1"
-            android:stretchColumns="1">
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row2_col0"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row2_col1"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row2_col2"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row2_col3"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-        </TableRow>
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:shrinkColumns="1"
-            android:stretchColumns="1">
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row3_col0"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row3_col1"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row3_col2"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-
-            <ImageButton
-                android:layout_width="0dp"
-                android:layout_height="80dp"
-                android:layout_weight="1"
-                android:id="@+id/row3_col3"
-                android:src="@drawable/red"
-                android:layout_margin="5dp"/>
-        </TableRow>
-    </TableLayout>
 
 </RelativeLayout>
